--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.mvc.view.prefix= /WEB-INF/jsp/
 spring.mvc.view.suffix= .jsp
 
 application.testname:testVaule
+
+#logging.level.org.springframework.web=DEBUG
+#logging.level.me.utlight.*=TRACE
+
