[mybatis]add the mybatis demo(using the xml way).

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,4 +21,13 @@ spring.datasource.test-while-idle=true
 spring.datasource.time-between-eviction-runs-millis=18800
 spring.datasource.jdbc-interceptors=ConnectionState;SlowQueryReport(threshold=0)
 
+#this is necessary for mysql to auto generate the tables.
 spring.jpa.hibernate.ddl-auto=update
+
+#HikariCP
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+
+#mybatis
+mybatis.config-location=classpath:mybatis-config.xml
+
+#pagehelper
